force-app/main/default/objects/Ethos_Integration_Configuration__mdt/fields/Override_Selector__c.field-meta.xml
<CustomField>
    <fullName>Override_Selector__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this field is checked, this setting will be used regardless of the environment you are on. Use this to send a request to the Avalara Sandbox from production.</inlineHelpText>
    <label>Override Selector</label>
    <type>Checkbox</type>
</CustomField>