force-app/main/default/objects/Ethos_Integration_Configuration__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>