force-app/main/default/objects/Ethos_Integration_Configuration__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>